# GUI-Model

./: .gitignore  PRD.md  README.md  gui-model.ipynb
GUI-Model/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  gui-model-llamafactory.ipynb  gui-model-unsloth.ipynb  gui-model.ipynb  gui-model_2.ipynb  pyproject.toml  requirements.txt  setup.py
GUI-Model/configs/unsloth/GUI-Model-AC/stage1_full/: gemma-4-e2b.yaml  gemma-4-e4b.yaml
GUI-Model/configs/unsloth/GUI-Model-AC/stage2_lora/gemma-4-e2b/: base.yaml  world_model.yaml
GUI-Model/configs/unsloth/GUI-Model-AC/stage2_lora/gemma-4-e4b/: base.yaml  world_model.yaml
GUI-Model/configs/unsloth/GUI-Model-MB/stage1_full/: gemma-4-e2b.yaml  gemma-4-e4b.yaml
GUI-Model/configs/unsloth/GUI-Model-MB/stage2_lora/gemma-4-e2b/: base.yaml  world_model.yaml
GUI-Model/configs/unsloth/GUI-Model-MB/stage2_lora/gemma-4-e4b/: base.yaml  world_model.yaml
GUI-Model/gui_model/: __init__.py
GUI-Model/scripts/: _action_eval.py  _common.sh  _hungarian_eval.py  _unsloth_infer.py  _unsloth_merge.py  _unsloth_train.py  eval_viewer.py  extract_androidcontrol_images.py  extract_androidcontrol_metadata.py  extract_mobibench_metadata.py  fix_jsonl_image_paths.py  setup.sh  split_data.py  stage1_eval.sh  stage1_eval_base.sh  stage1_eval_world_model.sh  stage1_merge.sh  stage1_train.sh  stage2_eval.sh  stage2_eval_base.sh  stage2_eval_world_model.sh  stage2_merge.sh  stage2_train.sh
GUI-Model/tests/: test_action_eval.py
Monkey/: CLAUDE.md  PRD.md  README.md  pyproject.toml  requirements.txt
Monkey-Collector/: .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LOCAL_RUN.md  PRD.md  README.md  apps.csv  pyproject.toml
Monkey-Collector/apks/: MISSING.md
Monkey-Collector/app/: settings.gradle.kts
Monkey-Collector/app/app/: build.gradle.kts
Monkey-Collector/app/app/src/main/: AndroidManifest.xml
Monkey-Collector/app/app/src/main/java/com/monkey/collector/: BitmapComparator.kt  CollectorService.kt  FloatingCollectorButton.kt  MainActivity.kt  MediaProjectionHelper.kt  ScreenCapture.kt  ScreenStabilizer.kt  TcpClient.kt  XmlDumper.kt
Monkey-Collector/app/app/src/main/res/values/: colors.xml  strings.xml
Monkey-Collector/catalog/: __init__.py  activities.json  apps.csv  download_apks.py  extract_activities.py
Monkey-Collector/catalog/apks/: MISSING.md
Monkey-Collector/collection/: cli.py  orchestrator.py  server.py
Monkey-Collector/collection/adb/: client.py
Monkey-Collector/collection/annotation/: llm_annotator.py  ocr_extractor.py  state_diff.py  world_modeling.py  xml_parser.py
Monkey-Collector/collection/explorer/: __init__.py  smart_explorer.py
Monkey-Collector/collection/format/: converter.py
Monkey-Collector/collection/storage/: writer.py
Monkey-Collector/configs/collection/: default.yaml
Monkey-Collector/monkey_collector/: __init__.py  actions.py  adb.py  cli.py  collector.py  converter.py  explorer.py  server.py  xml_encoder.py
Monkey-Collector/scripts/: collect.sh  download_apks.py  fetch_fdroid_apks.py  install_collector_to_avds.sh  setup_avd.sh
Monkey-Collector/server/: __init__.py  actions.py  activity_coverage.py  adb.py  cli.py  collector.py  converter.py  cost_tracker.py  explorer.py  graph_visualizer.py  page_graph.py  server.py  storage.py  text_generator.py
Monkey-Collector/server/domain/: __init__.py  activity_coverage.py  page_graph.py
Monkey-Collector/server/export/: __init__.py  converter.py
Monkey-Collector/server/infra/: __init__.py
Monkey-Collector/server/infra/device/: __init__.py  adb.py  apk_installer.py  avd.py
Monkey-Collector/server/infra/network/: __init__.py  server.py
Monkey-Collector/server/infra/storage/: __init__.py  storage.py
Monkey-Collector/server/infra/xml/: __init__.py  ui_tree.py
Monkey-Collector/server/infra/xml/parser/: __init__.py  structured_parser.py
Monkey-Collector/server/parser/: __init__.py  base.py  structured_parser.py
Monkey-Collector/server/pipeline/: __init__.py  app_catalog.py  batch_collector.py  collection_loop.py  collector.py  explorer.py  installed_sync.py  recovery.py  reset.py  session_manager.py  sweep.py  text_generator.py
Monkey-Collector/server/xml/: __init__.py  structured_parser.py
Monkey-Collector/src/monkey_collector/: __init__.py  adb.py  catalog_activities.py  cli.py  storage.py
Monkey-Collector/src/monkey_collector/domain/: __init__.py  activity_coverage.py  cost_tracker.py  page_graph.py
Monkey-Collector/src/monkey_collector/export/: __init__.py  converter.py
Monkey-Collector/src/monkey_collector/pipeline/: __init__.py  collection_loop.py  collector.py  explorer.py  installed_sync.py  recovery.py  session_manager.py  text_generator.py
Monkey-Collector/src/monkey_collector/xml/: __init__.py  structured_parser.py
Monkey-Collector/tests/: conftest.py  test_actions.py  test_activity_coverage.py  test_adb.py  test_apk_installer.py  test_app_catalog.py  test_avd_pool.py  test_batch_collector.py  test_cli.py  test_collector.py  test_converter.py  test_cost_tracker.py  test_download_apks.py  test_explorer.py  test_installed_sync.py  test_page_graph.py  test_reset.py  test_run_resume.py  test_server.py  test_storage.py  test_structured_parser.py  test_sweep.py  test_text_generator.py  test_xml_encoder.py  test_xml_parser.py
Monkey-Collector/tests/fixtures/: session_fixtures.py  xml_samples.py
Monkey-Collector/tests/integration/: test_collector.py  test_download_apks.py  test_explorer.py  test_server.py
Monkey-Collector/tests/unit/: test_activity_coverage.py  test_catalog_activities.py  test_cli.py  test_converter.py  test_cost_tracker.py  test_page_graph.py  test_run_resume.py  test_storage.py  test_structured_parser.py
Monkey/collection/: cli.py  orchestrator.py  server.py
Monkey/collection/adb/: client.py  monkey.py
Monkey/collection/annotation/: element_qa.py  grounding.py  world_modeling.py  xml_encoder.py  xml_parser.py
Monkey/collection/explorer/: __init__.py  action_space.py  smart_monkey.py
Monkey/scripts/: collect.sh  setup_avd.sh
(+11 files in other folders)
