[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-model"
version = "0.1.0"
description = "Training and evaluation pipeline for GUI world modeling and action prediction."
requires-python = ">=3.10,<3.13"
# 공통 deps. transformers / 서브프로젝트 / deepspeed / vllm 등은 extras 에서 선언한다.
# 설치는 단일 env (`gui-model`) 에서:
#     conda activate gui-model
#     pip install -e ./LlamaFactory --no-deps
#     pip install -e '.[llamafactory]'
# transformers 는 `==5.5.4` 로 고정한다 (Qwen2/2.5/3-VL 에서 검증된 값).
# 서브프로젝트 transitive 상한(LF <=5.2.0) 과 충돌하므로
# `pip install -e ./LlamaFactory --no-deps` 로 회피한다.
# 서브프로젝트의 `pyproject.toml` 은 수정하지 않는다.
dependencies = [
  "python-dotenv",
  "pyyaml",
  "pillow",
  "pyarrow",
  "sentencepiece",
  "tiktoken",
  "beautifulsoup4",
  "munkres",
  "rouge",
  "lxml",
  "nltk",
  "jieba",
  "rouge-chinese",
  "huggingface_hub>=0.34.0",
  "accelerate>=1.3.0,<=1.11.0",
]

# optional-dependencies 는 setup.py 의 EXTRAS 에서 동적으로 채운다 —
# local subproject (`./LlamaFactory`) 를 PEP 508 `file://` 절대 경로로
# 끌어와야 해서 선언적 테이블로는 표현할 수 없다. 여기서는 dynamic 만 선언한다.
dynamic = ["optional-dependencies"]
