[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-model"
version = "0.1.0"
description = "Training and evaluation pipeline for GUI world modeling and action prediction."
requires-python = ">=3.10,<3.13"
# 공통 deps. transformers / 서브프로젝트 / deepspeed / vllm 등은 extras 에서 선언한다.
# 설치는 단일 env (`gui-model`) 에서:
#     conda activate gui-model
#     pip install -e ./LlamaFactory
#     pip install -e '.[llamafactory]'
# transformers 는 `>=4.56.0,<4.57` 로 고정한다 (vllm 0.11.2 의 `transformers<5` 제약과
# LlamaFactory 서브프로젝트 pin `<=5.2.0` 의 교집합 안에서, 4.57.x 의 Qwen2.5-VL
# image token/feature strict mismatch 회귀를 피하기 위해 4.56.x 까지만 허용).
# 두 pin 이 겹치므로 `--no-deps` 우회는 더 이상 필요 없다.
# 서브프로젝트의 `pyproject.toml` 은 수정하지 않는다.
dependencies = [
  "python-dotenv",
  "pyyaml",
  "pillow",
  "pyarrow",
  "sentencepiece",
  "tiktoken",
  "beautifulsoup4",
  "munkres",
  "rouge",
  "lxml",
  "nltk",
  "jieba",
  "rouge-chinese",
  "huggingface_hub>=0.34.0",
  "accelerate>=1.3.0,<=1.11.0",
  # torch 2.9.x + Qwen2.5-VL `Conv3D` (visual.patch_embed) 조합은 심각한 학습 성능
  # 회귀 (pytorch/pytorch#166122) 가 있어 LlamaFactory loader 가 ValueError 로 차단한다.
  # LlamaFactory 의 `torch>=2.4.0` 은 상한이 없으므로 여기서 명시적으로 상한을 건다.
  "torch>=2.4.0,<2.9",
  "torchvision>=0.19.0,<0.24",
]

# optional-dependencies 는 setup.py 의 EXTRAS 에서 동적으로 채운다 —
# local subproject (`./LlamaFactory`) 를 PEP 508 `file://` 절대 경로로
# 끌어와야 해서 선언적 테이블로는 표현할 수 없다. 여기서는 dynamic 만 선언한다.
dynamic = ["optional-dependencies"]
