[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monkey-collector"
version = "0.1.0"
description = "Android GUI data collector for world modeling"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["server*"]

[project.scripts]
monkey-collect = "server.cli:main"
