[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monkey-collector"
version = "0.1.0"
description = "Android GUI data collector for world modeling"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "Pillow>=10.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["server*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
monkey-collect = "server.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]
markers = [
    "integration: tests exercising multiple modules together",
    "slow: tests taking more than 1 second",
]
timeout = 10

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["server", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
check_untyped_defs = true
ignore_missing_imports = true
